fix content shift

--- a/scss/peace.scss
+++ b/scss/peace.scss
@@ -1,6 +1,10 @@
 @import "./sidebar";
 @import "./chats.scss";
 
+html {
+	overflow-y: scroll;
+}
+
 .caret {
     display: inline-block;
     width: 0;
